Allow java-17 & `jdk.incubator.foreign` module. For myself.